<resources>
    <string name="app_name">אור לדור</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main_menu">MainMenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_notification">Notification</string>

    <string name="multimedia_prompt">סוג קישור</string>
    <string-array name="multimedia_arrays">
        <item>מוזיקה</item>
        <item>סרט</item>
        <item>אחר</item>
    </string-array>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="WelcomeHeader">ברוכים הבאים ליד לדור</string>
     <string name="lblWelcomeDescription">אנו מזמינים אתכם בני הדור השלישי לעולם של תכנים מותאמים אישית, בו תוכלו ליצור מרחב אינדוודואלי עם ההעדפות הפרטיות שלכם!
מאחלים לכם הנאה מרובה.</string>
    <string name="btnWelcomeRegister">אם ברצונך להצטרף אלינו, לחצ/י כאן</string>
    <string name="btnWelcomeLogin">אם כבר נרשמת אצלינו, לחצ/י כאן</string>
    <string name="btnfavoritpage">למעבר לאיזור האישי שלך לחצ/י</string>
    <string name="התחברות" />
    <string name="lblLoginHeader">התחברות</string>
    <string name="txtLoginUserName">שם משתמש</string>
    <string name="txtLoginPassword">סיסמא</string>
    <string name="btnLogin">התחבר</string>
    <string name="btnRegisterLink">אם אינך משתמש רשום, לחץ כאן</string>
    <string name="lblRegisterLabel">הרשמה</string>
    <string name="txtUserName">שם משתמש</string>
    <string name="txtPassword">סיסמא</string>
    <string name="txtRepassword">ווידוא סיסמא</string>
    <string name="btnSignup">הירשם</string>
    <string name="txtFullName">שם מלא</string>
    <string name="lblMainFavoriteHeader">ברוכים הבאים %s לעמוד המלצות המערכת המותאמת עבורך! </string>
    <string name="lblMainFavoriteDescription">במידה ואהבתם תכנים שהצענו לכם וסימנתם זאת, תראו זאת בדף המועדפים הפרטי שלכם.</string>
    <string name="btnFavoriteSongs">להאזנה לשירים שנבחרו עבורך לחצ/י</string>
    <string name="btnFavoriteMovies">לצפיה בסרטים שנבחרו עבורך לחצ/י</string>
    <string name="btnFavoriteOthers">לצפיה בתכנים נוספים שאולי יעניינו אותך לחצ/י</string>
    <string name="lvLanguage">שפה</string>
    <string name="lvDate">תאריך</string>
    <string name="title_activity_other_categories">OtherCategoriesActivity</string>
</resources>
