<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".Activities.Login.LoginActivity"
    android:background="#e6e6fee0">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblLoginHeader"
        android:id="@+id/lblLoginHeader"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/txtLoginUserName"
        android:layout_marginBottom="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/txtLoginPassword"
        android:password="true"
        android:textAlignment="viewEnd" />

    <Button
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin"
        android:id="@+id/email_sign_in_button"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:background="#86e9da" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRegisterLink"
        android:id="@+id/email_registration_button"
        android:layout_gravity="right"
        android:paddingRight="50dp" />

</LinearLayout>
