<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".com.lea.samsung.orledorapp.Activities.WelcomeActivity">

    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/WelcomeHeader"
        android:id="@+id/lblWelcomeHeader"
        style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblWelcomeDescription"
        android:id="@+id/lblWelcomeDescription"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnWelcomeLogin"
        android:id="@+id/btnWelcomeLogin"
        android:layout_margin="20dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnWelcomeRegister"
        android:id="@+id/btnWelcomeRegister"
        android:layout_margin="20dp" />
</LinearLayout>
