<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#e6e6fee0"
    tools:context=".Activities.MainFavoriteActivity">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/lblMainFavoriteHeader"
        android:textColor="#035438"
        android:textStyle="bold"
        android:paddingBottom="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/btnFavoriteSongs"
        android:id="@+id/btnFavoriteSongs"
        android:textColor="#ebfee4"
        android:textSize="20sp"

        android:background="@drawable/buttonshape"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"

        android:layout_marginBottom="20dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/btnFavoriteMovies"
        android:id="@+id/btnFavoriteMovies"
        android:textColor="#ebfee4"
        android:textSize="20sp"

        android:background="@drawable/buttonshape"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"


        android:layout_marginBottom="20dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/btnFavoriteOthers"
        android:id="@+id/btnFavoriteOthers"
        android:textColor="#ebfee4"
        android:textSize="20sp"

        android:background="@drawable/buttonshape"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"

        android:layout_marginBottom="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblMainFavoriteDescription"
        android:id="@+id/lblMainFavoriteDescription"
        android:textColor="#035438"
        android:textSize="20dp"
        android:paddingTop="20dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnfavoritpage"
        android:id="@+id/btnfavoritpage"
        android:textAlignment="center"
        android:background="#4c035438"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#035438"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:textSize="17dp" />

</LinearLayout>
